DTGB-214: Fixed the letter spacing of buttons.

--- a/components/21-atoms/buttons/_buttons.scss
+++ b/components/21-atoms/buttons/_buttons.scss
@@ -19,6 +19,7 @@
   height: 1.9rem;
   padding: .6rem 1.3rem;
   font-size: .6rem;
+  letter-spacing: .4px;
 }
 
 ///
@@ -33,6 +34,7 @@
   height: 2.2rem;
   padding: .6rem 1.8rem;
   font-size: .7rem;
+  letter-spacing: .5px;
 }
 
 ///
@@ -47,6 +49,7 @@
   height: 2.5rem;
   padding: .7rem 2.2rem;
   font-size: .8rem;
+  letter-spacing: .6px;
 }
 
 ///
